# voice2midi

./: Cargo.toml
src/: main.rs  moving_average.rs
src/ui/: mod.rs  tui.rs
