[package]
name = "voice2midi"
version = "0.1.0"
authors = ["Technohacker <technohacker1995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cpal = "0.13.1"
cursive = "*"
midir = "0.7.0"
pitch-detection = "0.2.0"